--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TourMeghalaya.com</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="packages.css">
+    <!-- <link rel="stylesheet" href="packages.css"> -->
+    <!-- <link rel="stylesheet" href="packages.css"> -->
+
+
 </head>
 <body>
 <!-- -------------------------hero section----------------------- -->
@@ -29,21 +34,62 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+
     <section class="heroSection">
         <div class="slider-container">
             <div class="slider">
-                <div class="slide"><img src="assets/pexels-itsthenmp-12233685.jpg" alt="Slide 1"></div>
-                <div class="slide"><img src="assets/pexels-nazmul-chowdhury-54846-945593.jpg" alt="Slide 3"></div>
-                <div class="slide"><img src="assets/pexels-sankha-subhra-bhattacharjee-716722829-18476582.jpg" alt="Slide 4"></div>
-                <div class="slide"><img src="assets/pexels-shobhit-bajpai-3360406-5036291.jpg" alt="Slide 5"></div>
-                <div class="slide"><img src="assets/pexels-shopnil-hasan-naim-500648713-16077212.jpg" alt="Slide 6"></div>
-                <!-- <div class="slide"><img src="assets/pexels-tanmoy-pal-3640736-29106676.jpg" alt="Slide 7"></div> -->
+                <div class="slide">
+                    <img src="assets/pexels-itsthenmp-12233685.jpg" alt="Slide 1">
+                    <p class="caption">Serene waterfalls in Meghalaya</p>
+                </div>
+                <div class="slide">
+                    <img src="assets/pexels-nazmul-chowdhury-54846-945593.jpg" alt="Slide 3">
+                    <p class="caption">Serene waterfalls in Meghalaya</p>
+                </div>
+                <div class="slide">
+                    <img src="assets/pexels-sankha-subhra-bhattacharjee-716722829-18476582.jpg" alt="Slide 4">
+                    <p class="caption">Serene waterfalls in Meghalaya</p>
+                </div>
+                <div class="slide">
+                    <img src="assets/pexels-shobhit-bajpai-3360406-5036291.jpg" alt="Slide 5">
+                    <p class="caption">Serene waterfalls in Meghalaya</p>
+                </div>
+                <div class="slide">
+                    <img src="assets/pexels-shopnil-hasan-naim-500648713-16077212.jpg" alt="Slide 6">
+                    <p class="caption">Serene waterfalls in Meghalaya</p>
+                </div>
             </div>
             <button class="prev" onclick="prevSlide()">&#10094;</button>
             <button class="next" onclick="nextSlide()">&#10095;</button>
         </div>
     </section>
+
+
+
+
+
+
+    <!-- --------------------Tours and Packages section------------------ -->
+     <section class="packagesSection">
+        <div class="packagesHeading">
+            <h2>TOURS PACKAGES & OPERATORS</h2>
+        </div>
+        <div class="secondHeading">
+            <h3>TOUR PACKAGES</h3>
+            <button>Tour Operators</button>
+        </div>
+        <div class="packages">
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
+            <div class="box4"></div>
+        </div>
+     </section>
+
+
+
+
+
 
     <script src="script.js"></script>
 </body>
