--- a/main.html
+++ b/main.html
@@ -5,114 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Incredible State Tourism</title>
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-    }
-
-    body {
-      background-color: #fffefb;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      background: #ffffff;
-      padding: 1rem 2rem;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
-    }
-
-    header nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav ul {
-      display: flex;
-      list-style: none;
-    }
-
-    nav ul li {
-      margin-left: 20px;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: #333;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav ul li a:hover {
-      color: #007B5E;
-    }
-
-    .hero {
-      position: relative;
-      height: 90vh;
-      background: url('https://source.unsplash.com/1600x900/?nature,hills') no-repeat center center/cover;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: white;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 1rem;
-      border-radius: 10px;
-    }
-
-    section {
-      padding: 60px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .card {
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: scale(1.05);
-    }
-
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .card-body {
-      padding: 1rem;
-    }
-
-    footer {
-      background-color: #111;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-  </style>
 </head>
 
 <body>
@@ -132,7 +26,11 @@
   </header>
 
   <div class="hero">
-    <h1>Discover the Untouched Beauty</h1>
+    <div class="hero-content">
+      <h1>Explore the</h1>
+      <h2>The Land Of Clouds - Meghalaya</h1>
+      <input type="text" placeholder="Search destinations here...">
+    </div>
   </div>
 
   <section id="about">
@@ -199,11 +97,7 @@
   </footer>
 
   <script>
-    // Basic placeholder functionality
-    document.querySelector("form").addEventListener("submit", function(e) {
-      e.preventDefault();
-      alert("Thank you for contacting us!");
-    });
+ script src
   </script>
 </body>
 
