--- a/main.html
+++ b/main.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Incredible State Tourism</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/destinations.css">
+  <link rel="stylesheet" href="CSS/packages.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -96,9 +98,8 @@
     <p>&copy; 2025 State Tourism. All Rights Reserved.</p>
   </footer>
 
-  <script>
- script src
-  </script>
+<script src="script.js"></script>
+
 </body>
 
 </html>
