Added Packages section

--- a/main.html
+++ b/main.html
@@ -22,13 +22,11 @@
 
         <div class="nav-div">
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#destinations">Destinations</a></li>
-            <li><a href="#experiences">Experiences</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#plan">Plan</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#destinations">DESTINATIONS</a></li>
+            <li><a href="#experiences">TOURS & PACKAGES</a></li>
+            <li><a href="#gallery">GALLERY</a></li>
+            <li><a href="#contact">CONTACT US</a></li>
           </ul>
         </div>
       </nav>
@@ -78,41 +76,55 @@
       </p>
     </section>
 
-    <section id="destinations">
-      <h2>Top Destinations</h2>
-      <div class="grid">
-        <div class="card">
-          <img
-            src="https://source.unsplash.com/400x300/?mountains"
-            alt="Mountains"
-          />
-          <div class="card-body">
-            <h3>Hill District</h3>
-            <p>Beautiful green landscapes, cool climate, and serene beauty.</p>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="https://source.unsplash.com/400x300/?waterfall"
-            alt="Waterfall"
-          />
-          <div class="card-body">
-            <h3>Falls Region</h3>
-            <p>Mesmerizing waterfalls tucked in lush forests.</p>
-          </div>
+    
+
+
+
+<!-- -------------------------------------TOURS AND PACKAGES SECTION--------------------------------------- -->
+
+  <section class="tours-section">
+    <h2>Tour Operators & Packages</h2>
+    <div class="tour-cards">
+
+      <div class="tour-card">
+        <img src="assets/Packages/pack3.jpg" alt="Shillong City Tour">
+        <div class="card-content">
+          <h3>Shillong City Tour</h3>
+          <p>Enjoy the legendary sights of Sohra and explore the cultural and natural landmarks of Jaintia Hills. Walk under the shadows of an ancient canopy in the Sacred Grove in Mawphlang, feel the breeze on the edge of the immense Laitlum canyon and marvel at the rock formations and pristine nature of Mawsynram.</p>
         </div>
       </div>
-    </section>
 
-    <section id="experiences">
-      <h2>Experiences</h2>
-      <ul>
-        <li>Adventure Activities</li>
-        <li>Nature Trails</li>
-        <li>Heritage Walks</li>
-        <li>Traditional Cuisine</li>
-      </ul>
-    </section>
+      <div class="tour-card">
+        <img src="assets/Packages/pack4.jpg" alt="Cherrapunji Adventure">
+        <div class="card-content">
+          <h3>Cherrapunji Adventure</h3>
+          <p>Hit all the top spots in the Khasi Hills with this tour package. Wander around in one of Asia’s most endearing natural golf courses, hit the mountain highways and view splendorous waterfalls and marvel at a living root bridge, a feat of natural engineering unique to the communities of southern Meghalaya.</p>
+        </div>
+      </div>
+
+      <div class="tour-card">
+        <img src="assets/Packages/pack1.jpg" alt="Dawki & Mawlynnong">
+        <div class="card-content">
+          <h3>Dawki & Mawlynnong</h3>
+          <p>This itinerary packages some of the best landmarks and destinations in the state of Meghalaya. From the natural and cultural attractions of Sohra to the breathtaking landscape of Laitlum Canyon, interspersed with the vibrancy of Shillong – you will experience layers of life in the Khasi Hills. Download for more information.</p>
+        </div>
+      </div>
+
+      <div class="tour-card">
+        <img src="assets/Packages/pack2.jpg" alt="Meghalaya Cultural Trail">
+        <div class="card-content">
+          <h3>Meghalaya Cultural Trail</h3>
+          <p>The verdant valleys of the southern ranges, a meandering river, the riveting cliffs of Sohra and the charm of Shillong – these are some of the memorable experiences in store for you with this comprehensive 6-day itinerary. Another highlight is the trek to the double-decker Living Root Bridge of Nongriat. Download for more details.</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+</body>
+</html>
+
+
 
     <section id="gallery">
       <h2>Gallery</h2>
