--- a/main.html
+++ b/main.html
@@ -71,10 +71,7 @@
 
     <section id="about">
       <h2>About the State</h2>
-      <p>
-        Explore the rich history, vibrant culture, and welcoming people of this
-        scenic Indian state.
-      </p>
+     
     </section>
 
     
@@ -85,6 +82,10 @@
 
   <section class="tours-section">
     <h2>TOURS OPERATORS & PACKAGES</h2>
+     <p>
+        Explore the rich history, vibrant culture, and welcoming people of this
+        scenic Indian state.
+      </p>
     <div class="tour-cards">
 
       <div class="tour-card">
@@ -135,15 +136,15 @@
 
   <div class="cards-container">
     <div class="adventure-card">
-      <img src="caving.jpg" alt="Caving">
+      <img src="assets/activities images/adventure2.jpg" alt="Caving">
       <div class="card-content">
         <h3>Caving</h3>
-        <button class="learn-btn" data-title="Caving" data-desc="Explore Meghalaya's magnificent limestone caves and underground marvels.">Learn More</button>
+        <p>Explore a subterranean labyrinth and discover what lies beneath. Meghalaya’s caves are legendary and this tour takes you through some of the most stunning limestone passages and formations.</p>
       </div>
     </div>
 
     <div class="adventure-card">
-      <img src="trekking.jpg" alt="Hikes and Treks">
+      <img src="assets/activities images/adventure1.jpg" alt="Hikes and Treks">
       <div class="card-content">
         <h3>Hikes & Treks</h3>
         <button class="learn-btn" data-title="Hikes & Treks" data-desc="Experience breathtaking treks through living root bridges and forest trails.">Learn More</button>
@@ -151,15 +152,24 @@
     </div>
 
     <div class="adventure-card">
-      <img src="paddling.jpg" alt="Paddling">
+      <img src="assets/activities images/adventure2.jpg" alt="Paddling">
       <div class="card-content">
         <h3>Paddling</h3>
         <button class="learn-btn" data-title="Paddling" data-desc="Enjoy kayaking and canoeing in Meghalaya's pristine rivers and lakes.">Learn More</button>
       </div>
     </div>
 
+      <div class="cards-container">
     <div class="adventure-card">
-      <img src="more.jpg" alt="More Adventures">
+      <img src="assets/activities images/adventure5.jpg" alt="Caving">
+      <div class="card-content">
+        <h3>Caving</h3>
+        <button class="learn-btn" data-title="Caving" data-desc="Explore Meghalaya's magnificent limestone caves and underground marvels.">Learn More</button>
+      </div>
+    </div>
+
+    <div class="adventure-card">
+      <img src="assets/activities images/adventure3.jpg" alt="More Adventures">
       <div class="card-content">
         <h3>More Adventures</h3>
         <button class="learn-btn" data-title="More Adventures" data-desc="Try ziplining, camping, mountain biking, and waterfall rappelling.">Learn More</button>
