--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
         <img src="assets/Slider Images/Home-Carousel-10.jpg" class="slide" />
         <img src="assets/Slider Images/Home-Carousel-11.jpg" class="slide" />
         <img src="assets/Slider Images/Home-Carousel-6.jpg" class="slide" />
-        <img src="assets/Slider Images/Slider_img2.jpg" class="slide" />
+        <img src="assets/Slider Images/image2.jpg" class="slide" />
       </div>
 
       <!-- Dot Indicators -->
@@ -246,9 +246,9 @@
 
       <div class="cards-container">
     <div class="adventure-card">
-      <img src="assets/activities images/adventure5.jpg" alt="More adventure">
+      <img src="assets/activities images/adventure6.jpg" alt="More adventure">
       <div class="card-content">
-        <h3>More adventures</h3>
+        <h3>Trekking-Mawsynram</h3>
         <p>Storm through mountain and forest trails – hit some of the most scenic highways in the country and enjoy detours that will introduce you to amazing new cultures and practices. Meghalaya on a bike is a dream for all adventurers, guaranteed to be a story you will never forget.</p>
       </div>
     </div>
