--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
     <div class="slider">
       <div class="hero">
         <div class="hero-content">
-          <h1>Explore the</h1>
+          <h1>EXPLORE</h1>
           <h2>The Land Of Clouds - Meghalaya</h2>
           <div class="search-container">
             <input
