Added gallery section

--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/packages.css" />
     <link rel="stylesheet" href="CSS/adventure.css">
     <link rel="stylesheet" href="CSS/contactsection.css">
+    <link rel="stylesheet" href="CSS/gallery.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
@@ -281,6 +282,52 @@
   </div>
 
 </section>
+
+
+
+
+
+
+
+<section id="gallery" class="gallery-section">
+  <h2>Collections</h2>
+
+  <div class="slider-row">
+    <div class="slider-track">
+      <img src="https://source.unsplash.com/random/300x200?nature,water" alt="">
+      <img src="https://source.unsplash.com/random/301x200?mountain" alt="">
+      <img src="https://source.unsplash.com/random/302x200?forest" alt="">
+      <img src="https://source.unsplash.com/random/303x200?lake" alt="">
+      <img src="https://source.unsplash.com/random/304x200?sky" alt="">
+      <img src="https://source.unsplash.com/random/305x200?river" alt="">
+      <img src="https://source.unsplash.com/random/300x200?nature,water" alt="">
+    </div>
+  </div>
+
+  <div class="slider-row">
+    <div class="slider-track">
+      <img src="assets/pexels-tanmoy-pal-3640736-29106676.jpg" alt="">
+      <img src="assets/About Images/Kudengrim-Living-Root-4-scaled.jpg" alt="">
+      <img src="assets/About Images/mawkyrwat-2-scaled.jpg" alt="">
+      <img src="assets/Gallery/activities.jpeg" alt="">
+      <img src="assets/Extra Images/Frame-46-600x352.webp" alt="">
+      <img src="assets/Destination Images/chandigre-rural-tourist-resort-4.jpg" alt="">
+    </div>
+  </div>
+
+  <div class="slider-row">
+    <div class="slider-track">
+      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="">
+      <img src="https://source.unsplash.com/random/312x200?valley" alt="">
+      <img src="https://source.unsplash.com/random/313x200?rocks" alt="">
+      <img src="https://source.unsplash.com/random/314x200?travel" alt="">
+      <img src="https://source.unsplash.com/random/315x200?bridge" alt="">
+      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="">
+    </div>
+  </div>
+</section>
+
+
 
 
 
